# test

./: .env.example  Dockerfile  PROJECT_SUMMARY.md  README.md  pyproject.toml
.github/workflows/: build-scail-worker.yml  build-worker.yml
agents/creative/: AGENT.md
agents/director/: AGENT.md
agents/lead/: AGENT.md
agents/publish/: AGENT.md
agents/qc/: AGENT.md
agents/scout/: AGENT.md
app/: main.py
app/agents/: brand_guide.py  carousel_composer.py  creative_agent.py  llm_client.py  orchestrator.py  publish_agent.py  rate_limiter.py  (+2 more)
calendar_bot/: .env.example  calendar_api.py  config.py  database.py  deploy.sh  llm.py  main.py  requirements.txt  run.sh  scheduler.py  tools.py
content_module/: __init__.py  __main__.py  mc_conductor.py
docs/: AGENTS.md  TOOLS.md
google_apps_script/: Code.gs  SETUP_RU.md
nutrition_bot/: bot.py  config.py  requirements.txt
pravyi-bereg/: .env.example  .gitignore  README.md  config.py  db.py  main.py  pipeline.py  requirements.txt  scheduler.py
scripts/: account_discovery.py  agent_memory.py  asset_router.py  content_scheduler.py  creative_agent.py  director_agent.py  instagram_scraper.py  kling_motion_control.py  mc_conductor.py  nano_banana_generator.py  package_creative.py  package_planner.py  package_publish.py  pipeline_runner.py  publish_agent.py  qc_agent.py  reference_queue.py  runpod_generator.py  scout_agent.py  state_manager.py  telegram_manager.py  telegram_preview.py
worker/: Dockerfile  entrypoint.sh  patch_handler.py  start.sh
worker-zimage/: Dockerfile  entrypoint.sh  workflow_api.json
(+55 files in other folders)
