[tool.poetry]
name = "content-module"
version = "0.2.0"
description = "Modular Instagram content creation system for AI character"
authors = ["Devin AI <158243242+devin-ai-integration[bot]@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-telegram-bot = "^20.7"
requests = "^2.31"
instagrapi = "^2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
